nenolod     2005/12/28 22:20:41 UTC	(20051228-4257)
  Log:
  new translation format proposal
  

  Changes:	Modified:
  +7 -6		trunk/translations/sample.language (File Modified) 


jilles      2005/12/28 22:08:06 UTC	(20051228-4255)
  Log:
  ns/us info:
  - Change "Last login from:" to "Last address:"
  - Move "Logins from:" up a bit
  - Don't show "Last seen" if the user is currently online
  

  Changes:	Modified:
  +25 -26	trunk/modules/nickserv/info.c (File Modified) 
  +23 -24	trunk/modules/userserv/info.c (File Modified) 


jilles      2005/12/28 21:16:23 UTC	(20051228-4253)
  Log:
  HelpServ has been nonfunctional for a long time,
  remove it from the example confs.
  

  Changes:	Modified:
  +0 -15	trunk/dist/example.conf (File Modified) 
  +0 -15	trunk/dist/example.userserv.conf (File Modified) 


jilles      2005/12/28 21:02:02 UTC	(20051228-4251)
  Log:
  Mention crypto/ircservices module.
  

  Changes:	Modified:
  +5 -0		trunk/dist/example.conf (File Modified) 
  +5 -0		trunk/dist/example.userserv.conf (File Modified) 


jilles      2005/12/28 19:43:11 UTC	(20051228-4249)
  Log:
  Correct fprintf() types for memos (ME lines)
  

  Changes:	Modified:
  +1 -1		trunk/backend/flatfile.c (File Modified) 


jilles      2005/12/28 18:03:12 UTC	(20051228-4247)
  Log:
  Always return a value in sra_add().
  

  Changes:	Modified:
  +1 -1		trunk/src/node.c (File Modified) 


jilles      2005/12/28 02:03:12 UTC	(20051228-4245)
  Log:
  Don't expire accounts with privs on them, otherwise
  someone can reregister them and take the privs.
  

  Changes:	Modified:
  +6 -0		trunk/src/node.c (File Modified) 


jilles      2005/12/28 01:27:40 UTC	(20051228-4243)
  Log:
  Enable $Id$ substitution.
  

  Changes:	Modified:
  + -		trunk/include/privs.h  (Property Modified)
  + -		trunk/src/privs.c  (Property Modified)


jilles      2005/12/28 01:26:38 UTC	(20051228-4241)
  Log:
  Add description of oper privileges.
  

  Changes:	Modified: